# storage-usage

./: Add-WindowsFeatures.ps1  README.md  recyclebin.md
disk-activity/: Build.ps1  Cargo.toml  README.md
disk-activity/src/: main.rs  pdh_error.rs
steam-games/: Cargo.toml
steam-games/src/: main.rs
storage-usage/: Cargo.toml  build-and-fix.ps1
storage-usage-v2/: .gitignore  Cargo.toml  README.md  TODO.md
storage-usage-v2/src/: config.rs  console_reuse.rs  elevation_commands.rs  init_tracing.rs  lib.rs  main.rs  mft_diff.rs  mft_dump.rs  mft_entry_iterator.rs  mft_query.rs  mft_show.rs  mft_summarize.rs  run_as_admin_wait.rs  to_args.rs  win_elevation.rs  win_handles.rs  win_strings.rs
storage-usage-v2/src/cli/: action.rs  config_action.rs  drive_letter_pattern.rs  elevation_action.rs  elevation_check_action.rs  elevation_test_action.rs  global_args.rs  mft_action.rs  mft_diff_action.rs  mft_dump_action.rs  mft_query_action.rs  mft_show_action.rs  mft_summarize_action.rs  mft_sync_action.rs  mod.rs
storage-usage-v2/src/tui/: app.rs  mainbound_message.rs  mod.rs  progress.rs  worker.rs
storage-usage-v2/src/tui/widgets/tabs/: app_tab.rs  app_tabs.rs  errors_tab.rs  keyboard_response.rs  mod.rs  overview_tab.rs  search_tab.rs  visualizer_tab.rs
storage-usage/examples/: elevation.rs  list_drives.rs  mft.rs  mft_status_access_violation.rs  open_c_drive.rs
storage-usage/src/: elevation.rs  get_mft_windows.rs  init.rs  main.rs  win_elevation.rs  win_handles.rs  win_mft.rs  win_mft_printer.rs  win_paged_mft_reader.rs  win_strings.rs
total-space/: Cargo.toml  README.md
total-space/src/: main.rs
