[package]
name = "disk-activity"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
windows = { version = "0.59.0", features = ["Win32", "Win32_System", "Win32_System_Performance"] }
