[package]
name = "storage-usage-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" } #, features = ["env-filter"] }
windows = "0.61.3"
