[package]
name = "storage-usage"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
